force-app/main/default/objects/ctu__General_Option_Value_Obj__c/ctu__General_Option_Value_Obj__c.object-meta.xml
<CustomObject>
    <label>CTU General Option Value</label>
    <nameField>
        <label>General Option Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTU General Option Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>