force-app/main/default/objects/ctu__General_Option_Value_Obj__c/fields/ctu__Data_Category__c.field-meta.xml
<CustomField>
    <fullName>ctu__Data_Category__c</fullName>
    <externalId>true</externalId>
    <label>Data Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>