force-app/main/default/objects/ctu__General_Option_Value_Obj__c/fields/ctu__Data_Label__c.field-meta.xml
<CustomField>
    <fullName>ctu__Data_Label__c</fullName>
    <externalId>true</externalId>
    <label>Data Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>