force-app/main/default/objects/ctu__General_Option_Value_Obj__c/fields/ctu__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>ctu__Default_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Value</label>
    <type>Checkbox</type>
</CustomField>